# motor-control

./: .gitignore  LICENSE  README.md  pyproject.toml
motor_controller/: block.py  controller.py  link.py  main.py  motor.py  plant.py  sensor.py  system.py
